--- a/GetHackedPrototype.csproj
+++ b/GetHackedPrototype.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="bin\Debug\net8.0\IPList.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Npgsql" Version="8.0.1" />
   </ItemGroup>
 
